# hitfirst

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
backend/app/: forms.py  run.py
backend/app/hitfirst/: initiative.py
backend/tests/: test_tracker.py
frontend/: package-lock.json  package.json
frontend/src/: index.html  initiative_tracker.tsx  initiativelist.tsx
src/: app.ts  combatants.tsx  index.html  initiative_tracker.tsx  initiativelist.tsx  storage.ts  styles.scss  types.ts
src/hitfirst/: order.py  server.py
src/hitfirst/frontend/: index.html  main.js  main.ts  main.tsx  styles.scss
templates/: root.html.j2
tests/: test_order.py
